Prevent overflow of items

--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -1,6 +1,7 @@
 :root {
   --ifm-menu-link-padding-horizontal: 1.5rem;
   --ifm-menu-link-padding-vertical: 0.25rem;
+  --doc-sidebar-width: 320px !important;
 }
 
 .menu::-webkit-scrollbar {
